# amber-html

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  Plans.md  README.md  RELEASING.md  cbindgen.toml  flake.nix  pyproject.toml
.github/workflows/: bindings.yml  ci.yml  release.yml
bindings/csharp/: .gitignore  README.md  generate.sh
bindings/csharp/src/AmberHtml/: Amber.cs  AmberHtml.csproj
bindings/csharp/tests/AmberHtml.Tests/: AmberHtml.Tests.csproj  SmokeTests.cs
bindings/dart/: .gitignore  README.md  generate.sh  pubspec.yaml
bindings/dart/lib/: amber.dart
bindings/dart/test/: smoke_test.dart
bindings/elixir/: .gitignore  README.md  mix.exs
bindings/elixir/lib/: amber.ex
bindings/elixir/lib/amber/: native.ex  snapshot.ex
bindings/elixir/native/amber_nif/: Cargo.toml
bindings/elixir/native/amber_nif/src/: lib.rs
bindings/elixir/test/: amber_test.exs
bindings/go/: .gitignore  README.md  amber.go  amber_test.go  generate.sh  go.mod
bindings/kotlin/: .gitignore  README.md  build.gradle.kts  generate.sh  settings.gradle.kts
bindings/kotlin/src/test/kotlin/: SmokeTest.kt
bindings/lua/: .gitignore  README.md  amber-html-0.1.0-1.rockspec  amber.lua  generate.sh
bindings/lua/test/: smoke.lua
bindings/php/: .gitignore  README.md  composer.json  generate.sh
bindings/php/src/: Amber.php
bindings/php/test/: smoke.php
bindings/r/: .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  generate.sh
bindings/r/R/: amber.R
bindings/r/src/: Makevars  amber.c
bindings/r/tests/: testthat.R
bindings/r/tests/testthat/: test-smoke.R
bindings/ruby/: .gitignore  README.md  amber-html.gemspec  generate.sh
bindings/ruby/lib/: amber_html.rb
bindings/ruby/test/: smoke.rb
bindings/swift/: .gitignore  Package.swift  README.md  build-xcframework.sh  generate.sh
bindings/swift/Tests/AmberHTMLTests/: SmokeTests.swift
crates/amber-cli/: Cargo.toml
crates/amber-cli/src/: main.rs
crates/amber-cli/tests/: cli_e2e.rs
crates/amber-core/: Cargo.toml  public-api.txt
crates/amber-core/src/: actions.rs  blocking.rs  browser.rs  budget.rs  cache.rs  capi.rs  capture.rs  cdp.rs  chromium.rs  corpus.rs  crawl.rs  daemon.rs  detect.rs  diff.rs  emulation.rs  error.rs  evidence.rs  extract.rs  fetch.rs  ffi.rs  http.rs  inline.rs  lib.rs  limits.rs  mcp.rs  meta.rs  metrics.rs  monitor.rs  naming.rs  output.rs  pool.rs  provenance.rs  recurring.rs  render.rs  robots.rs  secrets.rs  selectors.rs  semantic.rs  session.rs  sitemap.rs  (+4 more)
crates/amber-node/: Cargo.toml  build.rs  index.js  package.json
crates/amber-node/__test__/: smoke.test.js
crates/amber-node/src/: lib.rs
crates/uniffi-bindgen/: Cargo.toml
crates/uniffi-bindgen/src/: main.rs
docs/: DISTRIBUTION_AND_BINDINGS_PLAN.md  PACKAGING.md  PLAN.md
examples/c/: example.c
include/: amber.h
packaging/aur/: PKGBUILD
packaging/homebrew/: amber.rb
packaging/linux/: README.md
python/: smoke.py
python/amber/: __init__.py
