[workspace]
resolver = "2"
members = ["crates/amber-core", "crates/amber-cli"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/afeique/amber-html"
authors = ["AmberHTML Contributors"]

[workspace.dependencies]
amber-core = { path = "crates/amber-core" }
url = "2"
chrono = "0.4"
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
