[workspace]
resolver = "2"
members = ["crates/amber-core", "crates/amber-cli"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/afeique/amber-html"
authors = ["AmberHTML Contributors"]

[workspace.dependencies]
amber-core = { path = "crates/amber-core" }
url = "2"
chrono = "0.4"
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
htmd = "0.5"
dom_smoothie = "0.17"
ureq = { version = "3", features = ["rustls"] }
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-rs"] }
dirs = "6"
os_pipe = "1"
command-fds = "0.3"
base64 = "0.22"
scraper = "0.27"
encoding_rs = "0.8"
whatlang = "0.18"
