[package]
name = "amber-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "AmberHTML command-line interface — faithful local web-page capture."
keywords = ["web", "scraping", "capture", "cli", "screenshot"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "amber"
path = "src/main.rs"

[dependencies]
amber-core.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
