[package]
name = "amber-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "Local-first web-capture engine core (AmberHTML)."
keywords = ["web", "scraping", "capture", "chromium", "cdp"]
categories = ["web-programming", "api-bindings"]

[lib]
# rlib for the CLI/other Rust crates; cdylib for the UniFFI language bindings
# and napi/Node; staticlib for the C ABI's static consumers (a Swift xcframework,
# cgo static linking, …).
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
url.workspace = true
chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
htmd.workspace = true
dom_smoothie.workspace = true
ureq.workspace = true
zip.workspace = true
dirs.workspace = true
os_pipe.workspace = true
command-fds.workspace = true
libc.workspace = true
base64.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
scraper.workspace = true
encoding_rs.workspace = true
whatlang.workspace = true
tracing.workspace = true
uniffi.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
