[package]
name = "amber-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "Local-first web-capture engine core (AmberHTML)."
keywords = ["web", "scraping", "capture", "chromium", "cdp"]
categories = ["web-programming", "api-bindings"]

[lib]
# rlib for the CLI/other Rust crates; cdylib for the UniFFI language bindings
# and napi/Node; staticlib for the C ABI's static consumers (a Swift xcframework,
# cgo static linking, …).
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
url.workspace = true
chrono.workspace = true
serde_json.workspace = true
thiserror.workspace = true
htmd.workspace = true
dom_smoothie.workspace = true
ureq.workspace = true
zip.workspace = true
dirs.workspace = true
os_pipe.workspace = true
base64.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
scraper.workspace = true
encoding_rs.workspace = true
whatlang.workspace = true
tracing.workspace = true
uniffi.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

# Unix-only: fd-3/4 inheritance for the CDP pipe spawn (command-fds) and the
# setrlimit resource caps (libc). The crate `command-fds` is Unix-only and must
# not be built on Windows, which uses the CreateProcessW path below instead.
[target.'cfg(unix)'.dependencies]
command-fds.workspace = true
libc.workspace = true

# Windows-only: the CDP debug-pipe spawn uses raw CreateProcessW + the MSVCRT
# lpReserved2 handle block to hand the pipe ends to Chromium as fd 3/4 (Plans.md
# 12.2). Not pulled in on Unix, which uses command-fds instead.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",        # SECURITY_ATTRIBUTES — without it, windows-sys omits CreateProcessW
    "Win32_System_Threading",
    "Win32_System_Console",
] }
